--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,7 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TP3VeilleTechnologique"
         tools:targetApi="31">
-
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="false" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -50,7 +53,7 @@
         </activity>
         <activity
             android:name=".RegisterActivity"
-            android:theme="@style/Theme.TP3VeilleTechnologique"></activity>
+            android:theme="@style/Theme.TP3VeilleTechnologique" />
         <activity
             android:name=".LoginActivity"
             android:exported="true"
